# SCYTcheck

./: .gitignore  CHANGELOG.md  README.md  build-config.spec  fix_test_indentation.py  modify_analysis_page.py  modify_review_page.py  pyproject.toml  requirements.txt  run_app.bat  run_app.ps1  scytcheck_settings.json
.github/: copilot-instructions.md
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
scripts/: download_paddleocr_models.ps1  validate_hotpaths.py  validate_ocr_baseline.py
scripts/release/: build.ps1  runtime_hook_paddleocr.py  sign.ps1
specs/001-youtube-text-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sequential-frame-sampling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-paddleocr-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sidecar-log-streaming/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-improve-text-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-optimize-analysis-hotpaths/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation_report.json
specs/007-web-player-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  main.py
tests/: conftest.py
(+316 files in other folders)
